[package]
name = "aninamer"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Episode renamer for Anigelo"
homepage = "https://github.com/anigelo/aninamer"
documentation = "https://docs.rs/aninamer"
repository = "https://github.com/anigelo/aninamer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
regex = "1"
lazy_static = "1"
clap = { version = "3.2", features = ["derive"] }
